// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly when disabled 1`] = `
<li
  aria-current={false}
  className="item monday-style-menu-item disabled monday-style-menu-item--disabled"
  data-testid="menu-item"
  onClick={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="title monday-style-menu-item__title"
  >
    my item
  </div>
  
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "visibility": "hidden",
      }
    }
  />
</li>
`;

exports[`Snapshots renders correctly when selected 1`] = `
<li
  aria-current={false}
  className="item monday-style-menu-item selected monday-style-menu-item--selected"
  data-testid="menu-item"
  onClick={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="title monday-style-menu-item__title"
  >
    my item
  </div>
  
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "visibility": "hidden",
      }
    }
  />
</li>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<li
  aria-current={false}
  className="item monday-style-menu-item dummy-class-name"
  data-testid="menu-item"
  onClick={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="title monday-style-menu-item__title"
  >
    
  </div>
  
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "visibility": "hidden",
      }
    }
  />
</li>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<li
  aria-current={false}
  className="item monday-style-menu-item"
  data-testid="menu-item"
  onClick={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="title monday-style-menu-item__title"
  >
    
  </div>
  
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "visibility": "hidden",
      }
    }
  />
</li>
`;

exports[`Snapshots renders correctly with title and icon 1`] = `
<li
  aria-current={false}
  className="item monday-style-menu-item"
  data-testid="menu-item"
  onClick={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="iconWrapper monday-style-menu-item__icon-wrapper"
  >
    <span
      aria-hidden={true}
      aria-label="my item"
      className="icon_component icon monday-style-menu-item__icon icon_component--no-focus-style fa fa fa-star"
      onClick={[Function]}
      role="img"
    />
  </div>
  <div
    className="title monday-style-menu-item__title"
  >
    my item
  </div>
  
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "visibility": "hidden",
      }
    }
  />
</li>
`;
